--- a/main.html
+++ b/main.html
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <table border="1">
+        <thead>
+                <tr>
+                    <th>Roll Numbers</th>
+                    <th>Name</th>
+                </tr>
+        </thead>
+        <tbody>
+                 <tr>
+                    <td>1</td>
+                    <td>Pradeep</td>
+                 </tr>
+                 <tr>
+                    <td>2</td>
+                    <td>Neeraj</td>
+                 </tr>
+                 <tr>
+                    <td>3</td>
+                    <td>jaswant</td>
+                 </tr>
+        </tbody>
+        </table>
+   <h1>List of medias</h1>
+   <ol>
+    <li><img src="https://picsum.photos/id/123/200/300" alt="water droplets"></li>
+    <li><video controls src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"> <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="vidoe/mp4"></video></li>
+    <li><audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio></li>
+</ol>
 </body>
-
 </html>
